# cool-beans

./: Cargo.toml  README.md
config/: config.cfg
src/: main.rs
src/sql/: add_bean_buyer.sql  init.sql
web/scss/: index.scss
web/static/: index.css  index.css.map  index.html  script.js  style.css
web/static/checkout/: index.html
web/template/: admin.html  checkout.html  error.html  tracking.html  tracking_email.html
